--- a/model/Stock.ipynb
+++ b/model/Stock.ipynb
@@ -1853,12 +1853,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict():\n",
-    "    date = input('Enter date for which you want to predict Stock price of Tesla in \"YYYY-mm-dd\" format : ')\n",
-    "    pr_value = tree.predict([[toOrdinal(date)]])[0]\n",
-    "    print(\"The stock Price of Tesla on \",date,\" is $\",pr_value,sep=\"\")\n",
-    "    \n",
-    "# predict()\n",
+    "def predict():\r\n",
+    "    date = input('Enter date for which you want to predict Stock price of Tesla in \"YYYY-mm-dd\" format : ')\r\n",
+    "    pr_value = tree.predict([[toOrdinal(date)]])[0]\r\n",
+    "    print(\"The stock Price of Tesla on \",date,\" is $\",pr_value,sep=\"\")\r\n",
+    "    \r\n",
+    "#predict()\r\n",
     "#Uncomment above line to use jupyter notebook to predict"
    ]
   },
