--- a/model/Stock.ipynb
+++ b/model/Stock.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,14 @@
     "# Pandas library is helpful in dealing with data by using Series and DataFrames.\n",
     "\n",
     "import numpy as np\n",
-    "# Numpy library is used to work with Arrays efficiently"
+    "# Numpy library is used to work with Arrays efficiently\n",
+    "\n",
+    "pd.set_option(\"max_rows\",7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
        "4  2010-07-06  1.333333  1.333333  1.055333  1.074000   1.074000  103003500"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
        "(3077, 7)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +184,7 @@
        "Index(['Date', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -286,22 +288,13 @@
        "      <td>8.242573e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.076000</td>\n",
-       "      <td>1.108667</td>\n",
-       "      <td>0.998667</td>\n",
-       "      <td>1.053333</td>\n",
-       "      <td>1.053333</td>\n",
-       "      <td>1.777500e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>8.105333</td>\n",
-       "      <td>8.319333</td>\n",
-       "      <td>7.968000</td>\n",
-       "      <td>8.107333</td>\n",
-       "      <td>8.107333</td>\n",
-       "      <td>4.144350e+07</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -332,6 +325,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -339,8 +333,7 @@
        "count  3077.000000  3077.000000  3077.000000  3077.000000  3077.000000   \n",
        "mean     55.405059    56.647893    54.064774    55.395610    55.395610   \n",
        "std      93.814525    95.981686    91.416668    93.744898    93.744898   \n",
-       "min       1.076000     1.108667     0.998667     1.053333     1.053333   \n",
-       "25%       8.105333     8.319333     7.968000     8.107333     8.107333   \n",
+       "...            ...          ...          ...          ...          ...   \n",
        "50%      15.970000    16.230000    15.680000    15.992000    15.992000   \n",
        "75%      23.584000    23.908001    23.224001    23.519333    23.519333   \n",
        "max     411.470001   414.496674   405.666656   409.970001   409.970001   \n",
@@ -349,14 +342,15 @@
        "count  3.077000e+03  \n",
        "mean   9.347589e+07  \n",
        "std    8.242573e+07  \n",
-       "min    1.777500e+06  \n",
-       "25%    4.144350e+07  \n",
+       "...             ...  \n",
        "50%    7.544250e+07  \n",
        "75%    1.174650e+08  \n",
-       "max    9.140820e+08  "
+       "max    9.140820e+08  \n",
+       "\n",
+       "[8 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +377,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,26 +464,6 @@
        "      <td>123282000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>733955</th>\n",
-       "      <td>2010-07-02</td>\n",
-       "      <td>1.533333</td>\n",
-       "      <td>1.540000</td>\n",
-       "      <td>1.247333</td>\n",
-       "      <td>1.280000</td>\n",
-       "      <td>1.280000</td>\n",
-       "      <td>77097000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>733959</th>\n",
-       "      <td>2010-07-06</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>1.055333</td>\n",
-       "      <td>1.074000</td>\n",
-       "      <td>1.074000</td>\n",
-       "      <td>103003500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -498,26 +472,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>738410</th>\n",
-       "      <td>2022-09-12</td>\n",
-       "      <td>300.720001</td>\n",
-       "      <td>305.489990</td>\n",
-       "      <td>300.399994</td>\n",
-       "      <td>304.420013</td>\n",
-       "      <td>304.420013</td>\n",
-       "      <td>48674600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>738411</th>\n",
-       "      <td>2022-09-13</td>\n",
-       "      <td>292.899994</td>\n",
-       "      <td>297.399994</td>\n",
-       "      <td>290.399994</td>\n",
-       "      <td>292.130005</td>\n",
-       "      <td>292.130005</td>\n",
-       "      <td>68229600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>738412</th>\n",
@@ -560,11 +514,7 @@
        "733952   2010-06-29    1.266667    1.666667    1.169333    1.592667   \n",
        "733953   2010-06-30    1.719333    2.028000    1.553333    1.588667   \n",
        "733954   2010-07-01    1.666667    1.728000    1.351333    1.464000   \n",
-       "733955   2010-07-02    1.533333    1.540000    1.247333    1.280000   \n",
-       "733959   2010-07-06    1.333333    1.333333    1.055333    1.074000   \n",
        "...             ...         ...         ...         ...         ...   \n",
-       "738410   2022-09-12  300.720001  305.489990  300.399994  304.420013   \n",
-       "738411   2022-09-13  292.899994  297.399994  290.399994  292.130005   \n",
        "738412   2022-09-14  292.239990  306.000000  291.640015  302.609985   \n",
        "738413   2022-09-15  301.829987  309.119995  300.720001  303.750000   \n",
        "738414   2022-09-16  299.609985  303.709991  295.600006  303.350006   \n",
@@ -574,11 +524,7 @@
        "733952     1.592667  281494500  \n",
        "733953     1.588667  257806500  \n",
        "733954     1.464000  123282000  \n",
-       "733955     1.280000   77097000  \n",
-       "733959     1.074000  103003500  \n",
        "...             ...        ...  \n",
-       "738410   304.420013   48674600  \n",
-       "738411   292.130005   68229600  \n",
        "738412   302.609985   72628700  \n",
        "738413   303.750000   64795500  \n",
        "738414   303.350006   86949500  \n",
@@ -586,7 +532,7 @@
        "[3077 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,12 +1799,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict():\r\n",
-    "    date = input('Enter date for which you want to predict Stock price of Tesla in \"YYYY-mm-dd\" format : ')\r\n",
-    "    pr_value = tree.predict([[toOrdinal(date)]])[0]\r\n",
-    "    print(\"The stock Price of Tesla on \",date,\" is $\",pr_value,sep=\"\")\r\n",
-    "    \r\n",
-    "#predict()\r\n",
+    "def predict():\n",
+    "    date = input('Enter date for which you want to predict Stock price of Tesla in \"YYYY-mm-dd\" format : ')\n",
+    "    pr_value = tree.predict([[toOrdinal(date)]])[0]\n",
+    "    print(\"The stock Price of Tesla on \",date,\" is $\",pr_value,sep=\"\")\n",
+    "    \n",
+    "#predict()\n",
     "#Uncomment above line to use jupyter notebook to predict"
    ]
   },
